--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 ##### Spring Datasource #####
 
 spring.datasource.continue-on-error=false
-spring.datasource.url=jdbc:mysql://localhost:3306/tinyDB?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/tinydb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
