--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.max-lifetime=300000
+
+
+# Sharing variables
+
+tiny.url=http://localhost:8080/tiny-url
+
